@@ -1,1 +1,1 @@
-1.5.0
+1.6.0
