@@ -1,2 +1,1 @@
-* Bug fix in the processing of the remaining time
-* Error message if Full Disk Access is not granted
+Corrected the backup size computation
