@@ -1,3 +1,7 @@
+2022-08-17  Matteo Corti  <matteo@corti.li>
+
+        * tmstatus.sh: corrected the backup size (current backup & total size)
+
 2021-11-15  Matteo Corti  <matteo@corti.li>
 
         * tmstatus.sh: Error message if Full Disk Access is required
